src/objects/Tax_Slab__c.object
<CustomObject>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charge</label>
        <referenceTo>Project_Charges__c</referenceTo>
        <relationshipLabel>Tax Slabs</relationshipLabel>
        <relationshipName>Tax_Slabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Tax Slab</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From_Date__c</columns>
        <columns>Percentage__c</columns>
        <columns>To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Slab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Slabs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>